# StickyNotes

./: .gitignore  LICENSE.txt  README.rst
src/python/: MANIFEST.in  requirements.txt  setup.cfg  setup.py
src/python/sticky/: __init__.py  __main__.py  config.conf  configs.py  fs_api.py
src/python/stickynotes/: __init__.py  __main__.py  config.conf  configs.py  db_api.py
src/static/: dashboard.html  index.html  manager.html  noteview.html  qrexport.html
src/static/css/: dashboard.css  qrexport.css
src/static/js/: api.js  dashboard.js
