[metadata]
license_files = ../../LICENSE.txt
long_description = file: ../../README.rst
classifiers = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Framework :: Bottle
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.5
include_package_data = True
use_2to3 = True

[bdist_wheel]
universal = 1
